@@ -2,6 +2,7 @@
 
  * Make it slightly easier again to pick a solid colour for custom layers
  * Bug fix: remove duplicate layers when loading .world files
+ * Bug fix: eliminate several classes of errors that occurred when activating the eyedropper when it was already active - the selection is now cancelled instead
 
 -- Version 2.21.1, released 21-8-2023
 
